@@ -14,7 +14,7 @@
 
 <p>Latest stable release: <a href="http://cran.r-project.org/package=data.table" target="_top">1.5.3 on CRAN</a></p>
 
-<p><a href="http://crantastic.org/packages/data-table" target="_top">User reviews</a> and <a href="http://rwiki.sciviews.org/doku.php?id=packages:cran:data.table" target="_top">data.table wiki</a></p>
+<p><a href="http://www.inside-r.org/packages/cran/data.table" target="_top">User reviews</a> and <a href="http://rwiki.sciviews.org/doku.php?id=packages:cran:data.table" target="_top">data.table wiki</a></p>
 
 <p>Latest <a href="https://r-forge.r-project.org/scm/viewvc.php/pkg/NEWS?view=markup&root=datatable" target="_top">NEWS</a>
 from <a href="https://r-forge.r-project.org/R/?group_id=240" target="_top">1.5.4 on R-Forge</a> (in development).
